2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c: adding a NULL check causing a PANIC while dumping the
      IP in the fetch info() statement. How can this be NULL, since we 
      pass it the same way to alog()?. Tbanks again to Jonathan for this.

2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing bug #205 (leaking FDs). Due to an unhandled error
      state we would not change the HTTPEntity state and the conn ist not
      closed. Thanks to Jonathan for reporting this and Alex for the fix.

2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c: added <ip:port> output in info() log line for fetching
      the requested client URL. Thanks to Jonathan for this.
      [Msg-ID: <422880B3.90805@wirelessonenet.com>]

2005-03-02  Stipe Tolj  <stolj@wapme.de> 
    * doc/userguide/userguide.xml: fixed some typos and added sections for
      URL escape codes %m and %M for sms-service group.
    * gw/urltrans.c: adding URL escape codes %m for mclass and %M for mwi
      parameters of our Msg structure. Generally this shall allow to use
      smsc_http (kannel mode) interface to have MO transported transparently
      up via sms-service to an upstream smsbox instance for further processing.

2005-03-01 Andreas Fink <afink@gni.ch>
    * gw/smsc/smsc_at.c: be more friendly to modems which
      are not ready after opening serial port or after AT&F.
      Helps Ericsson T300

2005-03-01 Aarno Syvanen <as@gni.ch>
    * gw/smsc/smsc_at.c: Fixed error messages in "slow modem start patch"

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in], gw-config.h.in, gwlib/http.c: added option to make
      HTTP/1.1 keep-alive support disabled via optional configure switch 
      --disable-keepalive. Thanks to Jonathan Hauser 
      <jhouser@wirelessonenet.com> for this patch.
      [Msg-ID: <421B8103.7070301@wirelessonenet.com>]

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    Portability enhancement for non-gcc compilers, no logic change.